[package]
name = "ht"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avt = "0.11.1"
nix = { version = "0.28.0", features = ["term", "process", "fs", "signal"] }
serde_json = "1.0.117"
mio = { version = "0.8.11", features = ["os-poll", "os-ext"] }
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.203"

[profile.release]
strip = true
