[package]
name = "ht"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avt = "0.11.1"
nix = { version = "0.28.0", features = ["term", "process", "fs", "signal"] }
serde_json = "1.0.117"
mio = { version = "0.8.11", features = ["os-poll", "os-ext"] }
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5", default-features = false, features = ["http1", "ws"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"
rust-embed = "8.4.0"
mime_guess = "2.0.5"

[profile.release]
strip = true
